order-reception/src/main/kotlin/com/example/orderreception/error/ValidationError.kt
package com.example.orderreception.error

data class ValidationError(val message: String?)